; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_exec.c_exec_IsSet.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_exec.c_exec_IsSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fdescriptor = type { i32 }
%struct.physical = type { i32 }
%struct.execdevice = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fdescriptor*, i32*)* @exec_IsSet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_IsSet(%struct.fdescriptor* %0, i32* %1) #0 {
  %3 = alloca %struct.fdescriptor*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.physical*, align 8
  %6 = alloca %struct.execdevice*, align 8
  %7 = alloca i32, align 4
  store %struct.fdescriptor* %0, %struct.fdescriptor** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.fdescriptor*, %struct.fdescriptor** %3, align 8
  %9 = call %struct.physical* @descriptor2physical(%struct.fdescriptor* %8)
  store %struct.physical* %9, %struct.physical** %5, align 8
  %10 = load %struct.physical*, %struct.physical** %5, align 8
  %11 = getelementptr inbounds %struct.physical, %struct.physical* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call %struct.execdevice* @device2exec(i32 %12)
  store %struct.execdevice* %13, %struct.execdevice** %6, align 8
  %14 = load %struct.execdevice*, %struct.execdevice** %6, align 8
  %15 = getelementptr inbounds %struct.execdevice, %struct.execdevice* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp sge i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %2
  %19 = load %struct.execdevice*, %struct.execdevice** %6, align 8
  %20 = getelementptr inbounds %struct.execdevice, %struct.execdevice* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = call i64 @FD_ISSET(i64 %21, i32* %22)
  %24 = icmp ne i64 %23, 0
  br label %25

25:                                               ; preds = %18, %2
  %26 = phi i1 [ false, %2 ], [ %24, %18 ]
  %27 = zext i1 %26 to i32
  store i32 %27, i32* %7, align 4
  %28 = load %struct.fdescriptor*, %struct.fdescriptor** %3, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = call i64 @physical_IsSet(%struct.fdescriptor* %28, i32* %29)
  %31 = load i32, i32* %7, align 4
  %32 = sext i32 %31 to i64
  %33 = add nsw i64 %32, %30
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* %7, align 4
  %35 = load i32, i32* %7, align 4
  ret i32 %35
}

declare dso_local %struct.physical* @descriptor2physical(%struct.fdescriptor*) #1

declare dso_local %struct.execdevice* @device2exec(i32) #1

declare dso_local i64 @FD_ISSET(i64, i32*) #1

declare dso_local i64 @physical_IsSet(%struct.fdescriptor*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
